Web Inspector: Timelines content browser NavigationBar is squashed at narrow heights https://bugs.webkit.org/show_bug.cgi?id=182196 <rdar://problem/36929899>
Reviewed by Joseph Pecoraro.

* UserInterface/Views/NavigationBar.css:
(.navigation-bar):


Canonical link: https://commits.webkit.org/198016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227707 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/NavigationBar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NavigationBar.css
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
     flex-wrap: wrap;
 
     border-bottom: 1px solid var(--border-color);
